
plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // implementation group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.17.0'
    // implementation files('libs/yahoofinanceapi-3.17.0.jar')
     implementation("org.slf4j:slf4j-api:1.6.1")
    implementation("org.slf4j:slf4j-simple:1.6.1")
    implementation 'com.squareup.okhttp3:okhttp:4.10.0' // Check for the latest version
    implementation 'com.google.code.gson:gson:2.10.1' 
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.json:json:20230227'

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
application {
    mainClass.set('org.example.App')
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
        languageVersion = JavaLanguageVersion.of(17)
    }
}

javafx {
    version = "17"
    modules = [ 'javafx.controls' ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

run {
    jvmArgs = [
        '--add-exports=java.base/java.lang=ALL-UNNAMED',
        '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
    ]
}




